co/gcc/l
In file included from coroutine.c:25:0:
coroutine.h:54:23: error: expected ‘)’ before ‘*’ token
 typedef void (CALLBACK* CallBackRoutine) (void*);
                       ^
coroutine.h:58:4: error: unknown type name ‘CallBackRoutine’
    CallBackRoutine fn;
    ^
coroutine.h:64:37: error: unknown type name ‘CallBackRoutine’
 EXTERN EXPORT Coroutine* co_create( CallBackRoutine fn ,void* param);
                                     ^
coroutine.c:35:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘def_routine’
 void CALLBACK def_routine(void* param){
               ^
coroutine.c:40:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘copy_memory’
 void __fastcall copy_memory(unsigned char* dest,const unsigned char* src,unsigned int size){
                 ^
coroutine.c:62:23: error: unknown type name ‘CallBackRoutine’
 Coroutine* co_create( CallBackRoutine fn ,void* param){
                       ^
coroutine.c: In function ‘co_start’:
coroutine.c:77:35: warning: implicit declaration of function ‘co_create’ [-Wimplicit-function-declaration]
    co->caller = co_cur ? co_cur : co_create(def_routine,0);
                                   ^
coroutine.c:77:45: error: ‘def_routine’ undeclared (first use in this function)
    co->caller = co_cur ? co_cur : co_create(def_routine,0);
                                             ^
coroutine.c:77:45: note: each undeclared identifier is reported only once for each function it appears in
coroutine.c:80:7: error: called object is not a function or function pointer
       co->fn(co->param);
       ^
coroutine.c: In function ‘co_pause’:
coroutine.c:100:7: warning: implicit declaration of function ‘copy_memory’ [-Wimplicit-function-declaration]
       copy_memory(co_cur->stack.buf,p,stksize);
       ^
